@startuml
    namespace com.hack23.cia.web.impl.ui.application.views.user.document {

        class DocumentView [[DocumentView.html]] {
            {static} +NAME: String
            +DocumentView(ApplicationContext)
        }

        class SearchDocumentView [[SearchDocumentView.html]] {
            {static} +NAME: String
            +SearchDocumentView(ApplicationContext)
        }

        class DocumentsView [[DocumentsView.html]] {
            {static} +NAME: String
            +DocumentsView(ApplicationContext)
        }

        com.hack23.cia.web.impl.ui.application.views.user.common.AbstractUserView <|-- DocumentView
        com.hack23.cia.web.impl.ui.application.views.user.common.AbstractUserView <|-- SearchDocumentView
        com.hack23.cia.web.impl.ui.application.views.user.common.AbstractUserView <|-- DocumentsView
    }

    namespace com.hack23.cia.web.impl.ui.application.views.user.common {
        abstract class AbstractUserView [[../common/AbstractUserView.html]] {
        }
    }

    center footer UMLDoclet 2.0.7, PlantUML 1.2019.12
@enduml
